<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Ellucian Company L.P. and its affiliates.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:showAsAction="ifRoom|withText"
        android:id="@+id/view_target"
        android:title="@string/courses_menu_view_target" />
    <item
        android:showAsAction="ifRoom|withText"
        android:id="@+id/assignment_detail_remind_me"
        android:title="@string/ilp_remind_me" />
    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:showAsAction="ifRoom"
        android:actionProviderClass="android.widget.ShareActionProvider" />
    <item
        android:showAsAction="ifRoom|withText"
        android:id="@+id/event_detail_add_to_calendar"
        android:title="@string/menu_add_to_calendar" />
</menu>