<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Ellucian Company L.P. and its affiliates.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:padding="6dp"
        android:text="@string/registration_search_header"
        android:textAppearance="@android:style/TextAppearance.Medium" />
    
    <Spinner
        android:id="@+id/terms_spinner"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:padding="6dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="6dp"
            android:layout_gravity="start"
            android:paddingLeft="6dp"
            android:paddingStart="6dp"
            android:paddingRight="6dp"
            android:paddingEnd="6dp"
            android:textAlignment="viewStart"
            android:textDirection="locale"
            android:hint="@string/registration_search_field_hint" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/refine_search_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="6dp"
        android:paddingLeft="6dp"
        android:paddingStart="6dp"
        android:paddingRight="6dp"
        android:paddingEnd="6dp"
        android:text="@string/registration_search_refine_search"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:clickable="true" /> 
    
    <Button 
       android:id="@+id/search_button"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:padding="6dp"
       android:text="@string/label_search" />
        
</LinearLayout>
