<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Ellucian Company L.P. and its affiliates.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <include layout="@layout/progress_indicator" />

    <ScrollView android:layout_width="fill_parent"
                android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- TITLE -->

            <TextView
                android:id="@+id/login_dialog_title"
                style="@style/dialogTitle"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/dialog_sign_in_title"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <!-- USER NAME -->

            <LinearLayout
                style="@style/dialogRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/login_dialog_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:drawableLeft="@drawable/ic_username_field"
                        android:drawableStart="@drawable/ic_username_field"
                        android:hint="@string/dialog_username"
                        android:inputType="textEmailAddress"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <!-- PASSWORD -->

            <LinearLayout
                style="@style/dialogRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/login_dialog_password"
                        style="@style/dialogPasswordHintStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="2"
                        android:drawableLeft="@drawable/ic_password_field"
                        android:drawableStart="@drawable/ic_password_field"
                        android:hint="@string/dialog_password"
                        android:inputType="textPassword"
                        android:textAlignment="viewStart"
                        android:textDirection="locale"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <!-- STAY SIGNED IN -->

            <CheckBox
                style="@style/dialogRow.Light"
                android:id="@+id/login_dialog_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dialog_stay_signed_in"
                />

        </LinearLayout>

    </ScrollView>

    <!-- Horizontal Line -->
    <View
        style="@style/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        />

</LinearLayout>