<!--
  ~ Copyright 2015 Ellucian Company L.P. and its affiliates.
  -->
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <include layout="@layout/toolbar"/>

        <include layout="@layout/progress_indicator"/>

        <FrameLayout
            android:id="@+id/frame_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/directory_search_message"
                    style="@style/contentMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="@string/directory_search"/>

                <TextView
                    android:id="@+id/directory_search_sign_in"
                    style="@style/contentMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_below="@id/directory_search_message"
                    android:text="@string/directory_sign_in_message" />

                <TextView
                    android:id="@+id/directory_search_no_results"
                    style="@style/contentMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_below="@id/directory_search_sign_in"
                    android:visibility="gone"
                    android:text="@string/directory_no_results" />
            </RelativeLayout>

        </FrameLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="15dp"
            android:src="@drawable/ic_menu_filter"/>

    </android.support.design.widget.CoordinatorLayout>

    <include layout="@layout/drawer_list"/>

</android.support.v4.widget.DrawerLayout>